<resources>
    <string name="lookup_journey_provide_basic_information">Provide the basic information below to find your organization.</string>
    <string name="lookup_journey_where_is_your_business_located">Where is your business located</string>
    <string name="lookup_journey_which_state">What state is your business registered</string>
    <string name="lookup_journey_what_is_your_busoness_name">What is your business name or number</string>
    <string name="lookup_journey_company_name">Company name</string>
    <string name="lookup_journey_find_my_business">Find my business</string>
    <string name="lookup_journey_skip_enter_manually">Skip and enter manually</string>
    <string name="lookup_journey_select_your_business">Select your business</string>
    <string name="lookup_journey_select_organization">"Select an organization from the results or try again "</string>
    <string name="lookup_journey_business_structure">Business structure</string>
    <string name="lookup_journey_structure_type">Structure type</string>
    <string name="lookup_journey_this_is_my_business">Yes, this is my business</string>
    <string name="lookup_journey_try_again">No, try again</string>
    <string name="lookup_journey_clear_and_continue">Clear and search again</string>
    <string name="lookup_journey_no_organizations_found">No organizations found</string>
    <string name="lookup_journey_no_organizations_found_description">It seems we can\'t find the company with the provided information</string>
    <string name="lookup_journey_validation_business_name_3_char">Should be at least 3 characters</string>
    <string name="lookup_journey_label_common_info">"Not all businesses are the same, but there are some things that they have in common. "</string>
    <string name="lookup_journey_label_sole_propriotership">Sole Proprietorship</string>
    <string name="lookup_journey_label_business_legal_name">Business legal name</string>
    <string name="lookup_journey_label_last_known_Name">Doing business as (DBA)</string>
    <string name="lookup_journey_label_if_applicable">" (if applicable)"</string>
    <string name="lookup_journey_button_more_info">More info</string>
    <string name="lookup_journey_label_date_established">Date established</string>
    <string name="lookup_journey_set_date">Set a date</string>
    <string name="lookup_journey_label_ein">Employer identification number (EIN)</string>
    <string name="lookup_journey_label_business_structure">Business structure</string>
    <string name="lookup_journey_label_ein_description">The unique nine-digit number used to identify a business entity.</string>
    <string name="lookup_journey_button_when_do_you_need_ein">When do you need an EIN number?</string>
    <string name="lookup_journey_label_state_operating_in">State operating in</string>
    <string name="lookup_journey_Legal_name_is_missing">Legal name is missing</string>
    <string name="lookup_journey_state_is_missing">State operating in is missing</string>
    <string name="lookup_journey_date_established_is_missing">Date established is missing</string>
    <string name="lookup_journey_your_business">Your business</string>
    <string name="lookup_journey_your_business_details">Your business details</string>
    <string name="lookup_journey_label_industry">Industry</string>
    <string name="lookup_journey_label_business_description">Business description</string>
    <string name="lookup_journey_label_description">A short description of the company’s actual activities, services and/or products (Ex. Design and development of mobile apps).</string>
    <string name="lookup_journey_label_company_website">Company website</string>
    <string name="lookup_journey_label_dba_description">A DBA, also known as a trade name, fictitious name, or assumed name, is the name other than your legal business name, that you use to conduct business.</string>
    <string name="lookup_journey_industry_is_missing">Industry is missing</string>
    <string name="lookup_journey_business_description_is_missing">Business description is missing</string>
    <string name="lookup_journey_ein_link">https://www.irs.gov/businesses/small-businesses-self-employed/do-you-need-an-ein</string>
    <string name="lookup_journey_validation_ein_9_char">EIN must be 9 charaters</string>
    <string name="lookup_journey_address_validation_checkbox_co_applicant_same_address">Same as my address</string>
    <string name="lookup_journey_address_validation_main_applicant_container_title">Address</string>
    <string name="lookup_journey_address_validation_screen_single_applicant_title">Your address</string>
    <string name="lookup_journey_address_validation_screen_single_applicant_subtitle">your address</string>
    <string name="lookup_journey_address_validation_screen_coapplicant_title">Co-applicant address</string>
    <string name="lookup_journey_address_validation_screen_coapplicant_subtitle">applicants</string>
    <string name="lookup_journey_address_validation_screen_coapplicant_missing_address">No address available</string>
    <string name="app_name">lookup-journey</string>
    <string name="btn_continue">Continue</string>
    <string name="lookup_journey_label_we_need_to_know_you">We need to know where can we send important documents and information, as well as basic account items, like checks and debit cards.</string>
    <string name="lookup_journey_label_apt_suite">Apt / Suite</string>
    <string name="lookup_journey_label_optional">" (Optional)"</string>
    <string name="lookup_journey_label_city">City</string>
    <string name="lookup_journey_label_state">State</string>
    <string name="lookup_journey_label_street_number_and_name">Street number and name</string>
    <string name="lookup_journey_label_zip">ZIP code</string>
    <string name="lookup_journey_street_required">Street number and name is required</string>
    <string name="lookup_journey_street_number_exceeded">Street number and name may not exceed 200 characters.</string>
    <string name="lookup_journey_apt_exceeded">Apt / Suite may not exceed 100 characters.</string>
    <string name="lookup_journey_city_requried">City is required</string>
    <string name="lookup_journey_city_chars_exceeded">City may not exceed 100 characters.</string>
    <string name="lookup_journey_state_required">State is required</string>
    <string name="lookup_journey_zip_required">Zip code is required</string>
    <string name="lookup_journey_subtitle_business_structure">What is your business structure?</string>
    <string name="lookup_journey_title_business_structure">Business Profile</string>
    <string name="lookup_journey_subtitle_company_lookup">What does your company do</string>
    <string name="lookup_journey_title_company_lookup">Company lookup</string>
    <string name="lookup_journey_subtitle_business_info">Let’s find your business</string>
    <string name="lookup_journey_title_business_info">Business Profile</string>
    <string name="lookup_journey_subtitle_business_identity">Your business details</string>
    <string name="lookup_journey_title_business_identity">Business Profile</string>
    <string name="lookup_journey_title_lookup_address">Business Profile</string>
    <string name="lookup_journey_subtitle_lookup_address">Where is your business located</string>

</resources>