<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/journey_business_info">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?sizerMedium"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lookup_journey_label_ein"
            android:textAppearance="?textAppearanceFormLabel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lookup_journey_label_optional"
            android:textColor="?colorSecondary"
            android:textAppearance="?textAppearanceSubtitle1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputEin"
            style="@style/Widget.Backbase.TextInputLayout.Password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="?spacerXSmall"
            android:layout_weight="0.6">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="numberPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lookup_journey_label_ein_description"
        android:textColor="?colorSecondary"
        android:textAppearance="?textAppearanceSubtitle1" />

    <Button
        android:id="@+id/btnWhenDoYouNeedEin"
        style="?buttonStyleLink"
        android:background="@null"
        android:paddingVertical="0dp"
        android:layout_marginTop="0dp"
        android:layout_width="wrap_content"
        android:layout_height="?sizerXLarge"
        android:text="@string/lookup_journey_button_when_do_you_need_ein" />

</merge>