<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="?spacerMedium"
        android:layout_marginTop="?spacerXLarge"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="?spacerSmall"
                android:src="@drawable/ic_close_cross" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lblTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lookup_journey_select_your_business"
                android:textAppearance="?textAppearanceHeadline5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="?spacerMedium"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/llHeader"
            app:layout_constraintBottom_toTopOf="@id/btnTryAgain"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_report" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="?spacerMedium"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/lookup_journey_no_organizations_found"
                android:textAppearance="?textAppearanceHeadline5" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?spacerSmall"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/lookup_journey_no_organizations_found_description"
                android:textAppearance="?textAppearanceBody1"
                android:textColor="?colorTextSupport" />

        </LinearLayout>


        <com.backbase.android.design.button.BackbaseButton
            android:id="@+id/btnTryAgain"
            style="?buttonStylePrimary"
            android:layout_width="match_parent"
            android:layout_marginTop="?spacerMedium"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/lookup_journey_try_again"
            app:layout_constraintBottom_toTopOf="@id/btnSkip" />

        <com.backbase.android.design.button.BackbaseButton
            android:id="@+id/btnSkip"
            style="?buttonStyleSecondary"
            android:layout_width="match_parent"
            android:layout_marginBottom="?spacerMedium"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/lookup_journey_skip_enter_manually"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>