<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="?spacerMedium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.backbase.android.flow.common.uicomponents.hintcontainer.HintContainer
            android:id="@+id/hintContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="?spacerMedium"
            android:text="@string/lookup_journey_provide_basic_information"
            android:textAppearance="?textAppearanceFormLabel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="?spacerMedium"
            android:text="@string/lookup_journey_where_is_your_business_located"
            android:textAppearance="?textAppearanceFormLabel" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputBusinessLocation"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?sizerXSmall"
            app:endIconMode="dropdown_menu">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/txtBusinessLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>


        <!-- State -->
        <LinearLayout
            android:id="@+id/llState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="?spacerMedium"
                android:text="@string/lookup_journey_which_state"
                android:textAppearance="?textAppearanceFormLabel" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputState"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?sizerXSmall"
                app:endIconMode="dropdown_menu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/txtState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="?spacerMedium"
            android:text="@string/lookup_journey_what_is_your_busoness_name"
            android:textAppearance="?textAppearanceFormLabel" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputBusinessName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?spacerXSmall">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtBusinessName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lookup_journey_company_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.backbase.android.flow.common.uicomponents.MessageView
            android:id="@+id/messageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/llSelectedCompany"
            android:visibility="gone"
            android:background="@drawable/bg_selected_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="?spacerSmall"
            android:paddingVertical="?spacerMedium">

            <TextView
                android:id="@+id/lblCompanyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Company name"
                android:textAppearance="?textAppearanceBody2Medium" />

            <TextView
                android:id="@+id/lblCompanyStructure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="?spacerSmall"
                android:text="Company structure"
                android:textAppearance="?textAppearanceCaption" />

            <TextView
                android:id="@+id/lblCompanyAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="?spacerSmall"
                android:text="Company description"
                android:textAppearance="?textAppearanceBody2"
                android:textColor="?colorTextSupport" />

        </LinearLayout>
        
        
        <com.backbase.android.design.button.BackbaseButton
            android:id="@+id/btnClear"
            android:visibility="gone"
            style="?buttonStyleLink"
            android:layout_width="match_parent"
            android:layout_marginBottom="?spacerSmall"
            android:fontFamily="sans-serif-medium"
            android:gravity="start"
            android:text="@string/lookup_journey_clear_and_continue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.backbase.android.design.button.BackbaseButton
            android:id="@+id/btnContinue"
            android:visibility="gone"
            style="?buttonStylePrimary"
            android:layout_width="match_parent"
            android:layout_marginTop="?spacerMedium"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/btn_continue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.backbase.android.design.button.BackbaseButton
            android:id="@+id/btnFindBusiness"
            style="?buttonStylePrimary"
            android:layout_width="match_parent"
            android:layout_marginTop="?spacerMedium"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/lookup_journey_find_my_business"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        </com.backbase.android.flow.common.uicomponents.hintcontainer.HintContainer>

        <com.backbase.android.design.button.BackbaseButton
            android:id="@+id/btnSkip"
            style="?buttonStyleSecondary"
            android:layout_width="match_parent"
            android:layout_marginBottom="?spacerMedium"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/lookup_journey_skip_enter_manually"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
</ScrollView>