<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="?spacerMedium"
            android:layout_marginTop="?spacerXLarge"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="?spacerSmall"
                    android:src="@drawable/ic_close_cross" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/lblTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lookup_journey_select_your_business"
                    android:textAppearance="?textAppearanceHeadline5" />

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lblSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?spacerMedium"
                android:layout_marginBottom="?spacerMedium"
                android:text="@string/lookup_journey_select_organization"
                android:textAppearance="?textAppearanceBody1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCompanies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.backbase.android.design.button.BackbaseButton
                android:id="@+id/btnSelectBusiness"
                style="?buttonStylePrimary"
                android:layout_width="match_parent"
                android:layout_marginTop="?spacerMedium"
                android:enabled="false"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/lookup_journey_this_is_my_business" />

            <com.backbase.android.design.button.BackbaseButton
                android:id="@+id/btnCancel"
                style="?buttonStyleSecondary"
                android:layout_width="match_parent"
                android:layout_marginBottom="?spacerMedium"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/lookup_journey_try_again" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>