<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.backbase.android.flow.common.uicomponents.hintcontainer.HintContainer
        android:id="@+id/hintContainer"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="?spacerMedium"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="?spacerMedium"
                android:text="@string/lookup_journey_business_structure"
                android:textAppearance="?textAppearanceFormLabel" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputBusinessStructure"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?sizerXSmall"
                app:endIconMode="dropdown_menu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/txtBusinessStructure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/llStructureType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="?spacerMedium"
                    android:text="@string/lookup_journey_structure_type"
                    android:textAppearance="?textAppearanceFormLabel" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputStructureType"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="?sizerXSmall"
                    app:endIconMode="dropdown_menu">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/txtStructureType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.backbase.android.flow.common.uicomponents.MessageView
                android:id="@+id/messageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </com.backbase.android.flow.common.uicomponents.hintcontainer.HintContainer>

    <com.backbase.android.design.button.BackbaseButton
        android:id="@+id/btnContinue"
        style="?buttonStylePrimary"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="?spacerMedium"
        android:layout_marginTop="?spacerMedium"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/btn_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


